webapp/titanembeds/static/css/embed.css
/* ... */
.message_emoji {
  height: 20px;
}

.message_emoji:hover {
  cursor: pointer;
}

#chatcontent .message_emoji:hover {
  height: 30px;
}

/*.chatusername {*/
/*  display: table-header-group;*/
/*}*/
.chatmessage {
  display: block;
  color: #C3C4C5;
  color: var(--chatmessage);
  margin-top: 5px;
}

p.mentioned {
  font-weight: bold;
  font-style: italic;
}

p.mentioned span.chatmessage {
  color: #ff5252;
}

.chatmessage code {
  background-color: rgba(0, 0, 0, 0.1);
  color: lightgray;
  border-radius: 5px;
  padding: 2px;
}

.chatmessage code.blockcode {
  width: 100%;
  display: inline-block;
  white-space: pre-wrap;
  line-height: 15px;
  padding: 5px;
  margin-bottom: 3px;
}

.chatmessage .channellink, .chatmessage .discordmention, .rolemention {
  border-radius: 5px;
  background-color: rgba(0, 0, 0, 0.2);
  color: #82b1ff;
  cursor: pointer;
}

.chatmessage .channellink:hover, .chatmessage .discordmention:hover, .rolemention:hover {
  background-color: rgba(0, 0, 0, 0.5);
  color: white;
}

.embeds {
  display: block;
  width: 60%;
}

@media(max-width: 600px) {
  .embeds {
    width: 100%;
  }
}

.richembed {
  display: flex;
  border: solid 1px grey;
  background-color: rgba(0, 0, 0, 0.1);
  border-radius: 10px;
  overflow: hidden;
  margin-top: 3px;
}

.richembed .color {
  width: 6px;
  background-color: #cacbce;
}

.richembed .rich {
  margin: 10px;
  width: 100%;
}

.richembed img {
  border-radius: 5px;
}

.richembed .provider .name {
  color: #87909c;
}

.richembed .author .name {
  color: white;
}

.richembed .author img, .richembed .footer img {
  width: 20px;
  border-radius: 100px;
  vertical-align: bottom;
}

.richembed .description {
  white-space: pre-line;
}

.richembed .content {
  display: flex;
}

.richembed .innercontent {
  width: 100%;
}

.richembed .thumbnail {
  margin-left: 2px;
}

.richembed .thumbnail img {
  width: 100%;
  max-width: 170px;
}

.richembed .thumbnail img.materialboxed.active {
  max-width: none;
}

.richembed .fields {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

.richembed .field-name {
  font-weight: bold;
}

.richembed .field {
  flex: 0;
  min-width: 100%;
}

.richembed .field.inline {
  flex: 1;
  flex-basis: auto;
  min-width: 100px;
}

@media(max-width: 600px) {
  .richembed .field.inline {
    flex: 0;
    flex-basis: unset;
    min-width: 100%;
  }
}

.richembed .image img {
  max-width: 300px;
  width: 100%;
}

.richembed .image img.materialboxed.active {
  max-width: none;
}

.richembed .video {
  width: 100%;
  max-width: 450px;
}

#chatcontent img.attachment {
  width: 100%;
  max-width: 300px;
  max-height: 300px;
  object-fit: contain;
  display: block;
}

#chatcontent img.attachment.materialboxed.active {
  max-width: none;
  max-height: none;
}

#chatcontent .player {
  width: 100%;
  max-width: 400px;
}

#chatcontent span.reactions {
  display: block;
}

#chatcontent span.reactions .reaction {
  background-color: rgba(0, 0, 0, 0.1);
  font-size: 12pt;
  border-radius: 5px;
  margin-left: 6px;
  margin-top: 6px;
  padding-left: 3px;
  color: #C3C4C5;
  cursor: pointer;
  height: 27px;
  display: inline-block;
  min-width: 50px;
}

#chatcontent span.reactions .reaction:hover {
  transform: scale(1.3);
}

#chatcontent span.reactions .reaction:hover:active {
  transform: scale(0.9);
}

#chatcontent span.reactions .reaction img {
  max-width: 18px;
  max-height: 18px;
  vertical-align: middle;
}

#chatcontent span.reactions .reaction .count {
  float: right;
  margin-right: 6px;
}

.wdt-emoji-popup {
  position: fixed;
  bottom: 5%;
  right: 1%;
  z-index: 500;
  top: auto !important;
  left: auto;
}

.wdt-emoji-picker {
  bottom: 16px;
  right: 42px;
}

.wdt-emoji-picker span.emoji-outer.emoji-sizer {
  width: 20px;
  height: 20px;
}

#wdt-emoji-search, #wdt-emoji-search:focus {
  padding: 2px;
}

@media only screen and (max-width: 320px) {
  .wdt-emoji-picker {
      display: none;
  }
  
  #upload-file-btn {
    display: none;
  }
  
  #send-msg-btn {
    display: none;
  }
}

@media only screen and (min-width: 321px) {
  .wdt-emoji-picker {
      display: block;
  }
  
  #upload-file-btn {
    display: block;
  }
  
  #send-msg-btn {
    display: block;
  }
}

#upload-file-btn {
  position: absolute;
  bottom: 5px;
  right: 67px;
  color: gray;
  padding: 1px;
  transition: .3s ease-out;
}

#upload-file-btn:hover {
  color: white;
}

#send-msg-btn {
  position: absolute;
  bottom: 7px;
  right: 6px;
  width: 30px;
  height: 30px;
}

#send-msg-btn > i {
  position: relative;
  top: -13px;
}

#fileinput {
  display: none;
}

@media only screen and (min-width: 500px) {
  #filemodal-body {
    display: flex;
    justify-content: space-evenly;
  }
  
  #filemodal-right {
    width: 75%;
  }
}

#filepreview {
  max-width: 100px;
  max-height: 100px;
}

#messagebox-filemodal {
  background-color: rgba(0, 0, 0, 0.07);
}

#messagebox-filemodal::placeholder {
  color: #90a4ae;
}

#mention-picker {
  color: black;
  position: fixed;
  bottom: 40px;
  right: 5%;
  z-index: 500;
  width: 90%;
  max-width: 90%;
  max-height: 120px;
  min-height: 40px;
  background-color: #eceff1;
  border-radius: 5px;
  overflow-y: scroll;
  display: none;
}

#mention-picker-content {
  overflow: auto;
  height: 100%;
  padding: 5px;
  display: block;
}

#mention-picker .mention-choice {
  padding: 5px;
  height: 30px;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  cursor: pointer;
}

#mention-picker .mention-choice.selected {
  background-color: rgba(0, 0, 0, 0.07);
}

#mention-picker img {
  width: 25px;
  height: 25px;
}

#mention-picker .displayname {
  margin-left: 10px;
}

#mention-picker .realname {
  margin-left: auto;
}

@media only screen and (max-width: 320px) {
  #mention-picker .realname {
    display: none;
  }
}

#usercard .avatar {
  width: 100%;
  max-width: 120px;
}

#usercard .identity {
  display: inline;
  vertical-align: sub;
}
/* ... */

